--- a/ansible/roles/rke2-cluster/tasks/main.yml
+++ b/ansible/roles/rke2-cluster/tasks/main.yml
@@ -1,7 +1,25 @@
 ---
-# Clickodrome in Rancher Cluster Manager (see https://docs.google.com/document/d/1moUEMafx47uvIth07j6PrihuqqZTrZKSuNarZDO7HEg/edit#heading=h.etvwv3116ua8): 
+
+- name: get nodes list
+  kubernetes.core.k8s_info:
+    kind: Node
+    namespace: "{{ wpn_namespace }}"
+  register: node_list
+  delegate_to: localhost
+
+- name: debug nodes list json
+  debug:
+    msg: "{{ node_list.resources | map(attribute='metadata.name') | join(',') }}"
+  register: server_ip_list
+
+- name: Configure node
+  debug:
+    msg: "Node {{ inventory_hostname }} have to be configured"
+  when: "{{ inventory_hostname not in (node_list.resources | map(attribute='metadata.name')) }}"
+
+# Clickodrome in Rancher Cluster Manager (see https://docs.google.com/document/d/1moUEMafx47uvIth07j6PrihuqqZTrZKSuNarZDO7HEg/edit#heading=h.etvwv3116ua8):
 # Copy the token and checksum strings into secrets.yml
-#  - 
+#  -
 # run commands as root:
 # On workers:
 # CATTLE_AGENT_FALLBACK_PATH="/opt/rke2/bin" \
@@ -22,4 +40,4 @@
 #   --ca-checksum {{ _secrets.rk2_ca_checksum }} \
 #   --etcd --controlplane
 
-# 
+#
