[feature] add control plane and worker node configuration

--- a/ansible/roles/rke2-cluster/tasks/main.yml
+++ b/ansible/roles/rke2-cluster/tasks/main.yml
@@ -1,4 +1,5 @@
----
+- include_vars: ../vars/rancher-vars.yml
+  tags: always
 
 - name: get nodes list
   kubernetes.core.k8s_info:
@@ -12,32 +13,16 @@
     msg: "{{ node_list.resources | map(attribute='metadata.name') | join(',') }}"
   register: server_ip_list
 
-- name: Configure node
-  debug:
-    msg: "Node {{ inventory_hostname }} have to be configured"
-  when: "{{ inventory_hostname not in (node_list.resources | map(attribute='metadata.name')) }}"
+- name: Configure control node
+  ansible.builtin.shell:
+    cmd: CATTLE_AGENT_FALLBACK_PATH="/opt/rke2/bin" curl --insecure -fL https://{{ RKE_INSTALL_SERVER }}/system-agent-install.sh | sudo CATTLE_AGENT_FALLBACK_PATH="/opt/rke2/bin" sh -s - --server https://{{ RKE_INSTALL_SERVER }} --label 'cattle.io/os=linux' --token {{ rancher_token }} --ca-checksum {{ rancher_checksum }} --etcd --controlplane
+  when:
+    - inventory_hostname not in (node_list.resources | map(attribute='metadata.name'))
+    - RKE_ROLE == "control"
 
-# Clickodrome in Rancher Cluster Manager (see https://docs.google.com/document/d/1moUEMafx47uvIth07j6PrihuqqZTrZKSuNarZDO7HEg/edit#heading=h.etvwv3116ua8):
-# Copy the token and checksum strings into secrets.yml
-#  -
-# run commands as root:
-# On workers:
-# CATTLE_AGENT_FALLBACK_PATH="/opt/rke2/bin" \
-#   curl -fL https://{{ RKE_INSTALL_SERVER }}/system-agent-install.sh | \
-#   CATTLE_AGENT_FALLBACK_PATH="/opt/rke2/bin" \
-#   sh -s - --server https://{{ RKE_INSTALL_SERVER }} \
-#   --label 'cattle.io/os=linux' \
-#   --token {{ _secrets.rk2_install_token }} \
-#   --ca-checksum {{ _secrets.rk2_ca_checksum }} \
-#   --worker
-# On controllers:
-# CATTLE_AGENT_FALLBACK_PATH="/opt/rke2/bin" \
-#   curl -fL https://{{ RKE_INSTALL_SERVER }}/system-agent-install.sh | \
-#   CATTLE_AGENT_FALLBACK_PATH="/opt/rke2/bin" \
-#   sh -s - --server https://{{ RKE_INSTALL_SERVER }} \
-#   --label 'cattle.io/os=linux' \
-#   --token {{ _secrets.rk2_install_token }} \
-#   --ca-checksum {{ _secrets.rk2_ca_checksum }} \
-#   --etcd --controlplane
-
-#
+- name: Configure worker node
+  ansible.builtin.shell:
+    cmd: CATTLE_AGENT_FALLBACK_PATH="/opt/rke2/bin" curl --insecure -fL https://{{ RKE_INSTALL_SERVER }}/system-agent-install.sh | sudo CATTLE_AGENT_FALLBACK_PATH="/opt/rke2/bin" sh -s - --server https://{{ RKE_INSTALL_SERVER }} --label 'cattle.io/os=linux' --token {{ rancher_token }} --ca-checksum {{ rancher_checksum }} --worker
+  when:
+    - inventory_hostname not in (node_list.resources | map(attribute='metadata.name'))
+    - RKE_ROLE == "worker"
