--- a/kubernetes/wpn-sites/wpn-nginx-site-C.yml
+++ b/kubernetes/wpn-sites/wpn-nginx-site-C.yml
@@ -26,7 +26,7 @@ stringData:
 apiVersion: k8s.mariadb.com/v1alpha1
 kind: User
 metadata:
-  name: wp-db-user-c
+  name: wp-db-user-site-c
   namespace: wordpress-test
 spec:
   mariaDbRef:
@@ -50,7 +50,7 @@ spec:
     - "ALL PRIVILEGES"
   database: "wp-db-site-c"
   table: "*"
-  username: wp-db-user-c
+  username: wp-db-user-site-c
   grantOption: false
   host: "%"
 
