--- a/kubernetes/wpn-sites/wpn-nginx-site-R.yml
+++ b/kubernetes/wpn-sites/wpn-nginx-site-R.yml
@@ -38,7 +38,7 @@ stringData:
 apiVersion: k8s.mariadb.com/v1alpha1
 kind: User
 metadata:
-  name: wp-db-user-r
+  name: wp-db-user-site-r
   namespace: wordpress-test
 spec:
   mariaDbRef:
@@ -62,7 +62,7 @@ spec:
     - "ALL PRIVILEGES"
   database: "wp-db-site-r"
   table: "*"
-  username: wp-db-user-r
+  username: wp-db-user-site-r
   grantOption: false
   host: "%"
 
