--- a/kubernetes/wpn-sites/wpn-nginx-site-N.yml
+++ b/kubernetes/wpn-sites/wpn-nginx-site-N.yml
@@ -1,16 +1,16 @@
 apiVersion: wordpress.epfl.ch/v1
 kind: WordpressSite
 metadata:
-  name: site-c
+  name: site-n
   namespace: wordpress-test
 spec:
-  path: /site-A/site-C
+  path: /site-N
   visibility: public
   kubernetes:
     service: test
   wordpress:
-    title: Super Site C
-    tagline: Super Site C tagline !
+    title: Lesite de Nicolas
+    tagline: "Super Site Nicolas !"
     theme: wp-theme-2018
     languages:
       - fr
