[fix] add nfs-common for worker nodes

--- a/ansible/roles/rke2-cluster/tasks/main.yml
+++ b/ansible/roles/rke2-cluster/tasks/main.yml
@@ -29,7 +29,7 @@
 
 - name: Install NFS for worker nodes
   ansible.builtin.apt:
-    name: nfs-server
+    name: nfs-common
     state:
       present
   when:
