--- a/kubernetes/wpn-mariadb-backup.yml
+++ b/kubernetes/wpn-mariadb-backup.yml
@@ -2,19 +2,43 @@ apiVersion: k8s.mariadb.com/v1alpha1
 kind: Backup
 metadata:
   namespace: wordpress-test
-  name: scheduled-backup-site-a
+  name: scheduled-backup-site-a-test-s3
 spec:
   mariaDbRef:
     name: mariadb-min
   databases:
     - wp-db-site-a
-  schedule:
-    cron: "*/1 * * * *"
-    suspend: false
+#  schedule:
+#    cron: "*/1 * * * *"
+#    suspend: false
+#  storage:
+#    persistentVolumeClaim:
+#      resources:
+#        requests:
+#          storage: 100Mi
+#      accessModes:
+#        - ReadWriteOnce
   storage:
-    persistentVolumeClaim:
-      resources:
-        requests:
-          storage: 100Mi
-      accessModes:
-        - ReadWriteOnce
+    s3:
+      bucket: svc0041-b80382f4fba20c6c1d9dc1bebefc5583
+      prefix: backup/k8s
+      endpoint: s3.epfl.ch
+      accessKeyIdSecretKeyRef:
+        name: s3-backup-credentials
+        key: keyId
+      secretAccessKeySecretKeyRef:
+        name: s3-backup-credentials
+        key: accessSecret
+      tls:
+        enabled: true
+
+---
+apiVersion: v1
+kind: Secret
+type: Opaque
+metadata:
+  name: s3-backup-credentials
+  namespace: wordpress-test
+stringData:
+  keyId: REPLACE_THIS_WITH_KEY_ID
+  accessSecret: REPLACE_THIS_WITH_ACCESS_SECRET
