--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -23,7 +23,7 @@ RUN sed -i 's|^;log_level = .*|log_level = notice|' /etc/php/${PHP_VERSION}/fpm/
 RUN sed -i 's|^;log_limit = .*|log_limit = 4096|' /etc/php/${PHP_VERSION}/fpm/php-fpm.conf
 RUN sed -i 's|^error_log = .*|error_log = /proc/self/fd/2|' /etc/php/${PHP_VERSION}/fpm/php-fpm.conf
 
-COPY php.ini /etc/php/${PHP_VERSION}/conf.d/local.ini
+COPY php.ini /etc/php/${PHP_VERSION}/fpm/conf.d/local.ini
 
 RUN sed -i 's|^listen = .*|listen = /run/php-fpm.sock|' /etc/php/${PHP_VERSION}/fpm/pool.d/www.conf
 RUN sed -i 's|;access.log = .*|access.log = /dev/null|' /etc/php/${PHP_VERSION}/fpm/pool.d/www.conf
