[feature] WordPress CR's debug
Add an options to whether or not activate the WP_DEBUG in the custom 
resource definition.

This also add this properties in some k8s yaml.

--- a/kubernetes/wpn-sites/wpn-nginx-secret.yml
+++ b/kubernetes/wpn-sites/wpn-nginx-secret.yml
@@ -1,4 +1,9 @@
 ---
+!!!
+You are doing it wrong ! This configMap now managed through the WordPress 
+Operator and if you need to edit it, you should better look into it from
+there (https://github.com/epfl-si/wp-ops/tree/feature/wp-operator).
+!!!
 apiVersion: v1
 kind: Secret
 type: Opaque
