[feature] insert root user for nodes

--- a/ansible/inventory/rke2/hosts-test.yml
+++ b/ansible/inventory/rke2/hosts-test.yml
@@ -72,7 +72,9 @@ all:
       - # example of revoked key
         github: crazylady2004
         state: absent
-    USERS: []
+    USERS:
+      - username: root
+
 #      -
 #        username: administrator
 #        comment: default non root user
