--- a/kubernetes/wpn-sites/wpn-nginx-site-A.yml
+++ b/kubernetes/wpn-sites/wpn-nginx-site-A.yml
@@ -1,84 +1,98 @@
----
-apiVersion: k8s.mariadb.com/v1alpha1
-kind: Database
+apiVersion: wordpress.epfl.ch/v1
+kind: WordpressSite
 metadata:
-  name: wp-db-site-a
+  name: site-a
   namespace: wordpress-test
 spec:
-  # If you want the database to be created with a different name than the resource name
-  # name: my-logical-database
-  mariaDbRef:
-    name: mariadb-min
-  characterSet: utf8
-  collate: utf8_general_ci
-
----
-apiVersion: v1
-kind: Secret
-type: Opaque
-metadata:
-  name: wp-db-password-site-a
-  namespace: wordpress-test
-stringData:
-  password: secret
-
----
-apiVersion: k8s.mariadb.com/v1alpha1
-kind: User
-metadata:
-  name: wp-db-user-site-a
-  namespace: wordpress-test
-spec:
-  mariaDbRef:
-    name: mariadb-min
-  passwordSecretKeyRef:
-    name: wp-db-password-site-a
-    key: password
-  host: "%"
-  cleanupPolicy: Delete
-
----
-apiVersion: k8s.mariadb.com/v1alpha1
-kind: Grant
-metadata:
-  name: wp-grant-db-user-site-a
-  namespace: wordpress-test
-spec:
-  mariaDbRef:
-    name: mariadb-min
-  privileges:
-    - "ALL PRIVILEGES"
-  database: "wp-db-site-a"
-  table: "*"
-  username: wp-db-user-site-a
-  grantOption: false
-  host: "%"
-
----
-apiVersion: k8s.mariadb.com/v1alpha1
-kind: Backup
-metadata:
-  namespace: wordpress-test
-  name: scheduled-backup-site-a
-spec:
-  mariaDbRef:
-    name: mariadb-min
-  databases:
-    - wp-db-site-a
-  schedule:
-    cron: "40 * * * *"
-    suspend: false
-  storage:
-    s3:
-      bucket: svc0041-b80382f4fba20c6c1d9dc1bebefc5583
-      prefix: backup/wpn/site-a
-      endpoint: s3.epfl.ch
-      accessKeyIdSecretKeyRef:
-        name: s3-backup-credentials
-        key: keyId
-      secretAccessKeySecretKeyRef:
-        name: s3-backup-credentials
-        key: accessSecret
-      tls:
-        enabled: true
-
+  path: /site-A
+  visibility: public
+  kubernetes:
+    service: test
+  wordpress:
+    title: Super Site A
+    tagline: Super Site A tagline !
+    theme: wp-theme-2018
+    languages:
+      - fr
+      - en
+    debug: true
+  epfl:
+    unit_id: 1906
+# 
+# ---
+# apiVersion: k8s.mariadb.com/v1alpha1
+# kind: Database
+# metadata:
+#   name: wp-db-site-a
+#   namespace: wordpress-test
+# spec:
+#   # If you want the database to be created with a different name than the resource name
+#   # name: my-logical-database
+#   mariaDbRef:
+#     name: mariadb-min
+#   characterSet: utf8
+#   collate: utf8_general_ci
+# 
+# ---
+# apiVersion: v1
+# kind: Secret
+# type: Opaque
+# metadata:
+#   name: wp-db-password-site-a
+#   namespace: wordpress-test
+# stringData:
+#   password: secret
+# 
+# ---
+# apiVersion: k8s.mariadb.com/v1alpha1
+# kind: User
+# metadata:
+#   name: wp-db-user-site-a
+#   namespace: wordpress-test
+# spec:
+#   mariaDbRef:
+#     name: mariadb-min
+#   passwordSecretKeyRef:
+#     name: wp-db-password-site-a
+#     key: password
+#   host: "%"
+#   cleanupPolicy: Delete
+# 
+# ---
+# apiVersion: k8s.mariadb.com/v1alpha1
+# kind: Grant
+# metadata:
+#   name: wp-grant-db-user-site-a
+#   namespace: wordpress-test
+# spec:
+#   mariaDbRef:
+#     name: mariadb-min
+#   privileges:
+#     - "ALL PRIVILEGES"
+#   database: "wp-db-site-a"
+#   table: "*"
+#   username: wp-db-user-site-a
+#   grantOption: false
+#   host: "%"
+# 
+# ---
+# apiVersion: k8s.mariadb.com/v1alpha1
+# kind: Backup
+# metadata:
+#   namespace: wordpress-test
+#   name: scheduled-backup-site-a
+# spec:
+#   mariaDbRef:
+#     name: mariadb-min
+#   databases:
+#     - wp-db-site-a
+#   schedule:
+#     cron: "0 3 * * *"
+#     suspend: false
+#   storage:
+#     persistentVolumeClaim:
+#       resources:
+#         requests:
+#           storage: 100Mi
+#       accessModes:
+#         - ReadWriteOnce
