[fix] comment source

--- a/iso/mods/user-data.yml
+++ b/iso/mods/user-data.yml
@@ -11,8 +11,8 @@ autoinstall:
   refresh-installer:
     update: false
 
-  source:
-    id: ubuntu-server-minimal
+#  source:
+#    id: ubuntu-server-minimal
 
   # user-data:
   #   disable_root: false
