--- a/iso/mods/user-data-nonet.yml
+++ b/iso/mods/user-data-nonet.yml
@@ -6,15 +6,15 @@ autoinstall:
   locale: en_US.UTF-8
   timezone: "Europe/Zurich"
   keyboard:
-    layout: us
-    variant: ""
+    layout: ch
+    variant: "fr"
     toggle: null
 
   refresh-installer:
     update: false
-
-  source:
-    id: ubuntu-server-minimal
+#
+#  source:
+#    id: ubuntu-server-minimal
 
   # user-data:
   #   disable_root: false
@@ -48,14 +48,8 @@ autoinstall:
     install-server: true
     allow-pw: false
 
-  # commands that are executed even before /target is mounted
-  # here we might need to manually install the network for installation to work
-  early-commands:
-    - touch /run/continue && while [ -f /run/continue ]; do sleep 1; done
-
   # runcmd (commands that run at first boot) might do the job too
   late-commands:
-    - touch /run/continue && while [ -f /run/continue ]; do sleep 1; done
     - |
       if [ -f /cdrom/config/authorized_keys ] ; then
         [ -d /target/root/.ssh ] || mkdir /target/root/.ssh
@@ -63,4 +57,3 @@ autoinstall:
         chmod 0700 /target/root/.ssh
         chmod 0600 /target/root/.ssh/authorized_keys
       fi
-    - touch /run/continue && while [ -f /run/continue ]; do sleep 1; done
