[feature] Add the namespace creation if not exist and the `nfs-subdir-external-provisioner` chart helm to the configuration as code

--- a/ansible/playbooks/rke2.yml
+++ b/ansible/playbooks/rke2.yml
@@ -7,6 +7,15 @@
       tags:
         - system
 
+- name: Cluster configuration
+  hosts: clusters
+  gather_facts: False
+  roles:
+    - name: install kinds on rke2 cluster
+      role: ../roles/rke2-cluster
+      tags:
+        - rke2-cluster
+
 - name: Kuberbetes association
   hosts: nodes
   gather_facts: False
