--- a/ansible/inventory/rke2/hosts-test.yml
+++ b/ansible/inventory/rke2/hosts-test.yml
@@ -73,7 +73,7 @@ all:
         github: crazylady2004
         state: absent
     USERS:
-      - username: root
+      - username: []
 
 #      -
 #        username: administrator
@@ -113,9 +113,9 @@ nodes:
 #        itswbhst0021:
 #          ansible_host: itswbhst0021.xaas.epfl.ch
 #          ansible_ip: 128.178.218.17
-        itswbhst0022:
-          ansible_host: itswbhst0022.xaas.epfl.ch
-          ansible_ip: 128.178.218.28
+#        itswbhst0022:
+#          ansible_host: itswbhst0022.xaas.epfl.ch
+#          ansible_ip: 128.178.218.28
       vars:
         RKE_ROLE: worker
 
