--- a/ansible/inventory/rke2/hosts-test.yml
+++ b/ansible/inventory/rke2/hosts-test.yml
@@ -123,6 +123,7 @@ clusters:
   "hosts":
     wordpress-test:
       ansible_rancher_url: https://rancher-fsd.epfl.ch
+      ansible_connection: local
       ansible_user: root
       ansible_rancher_credentials_file: "kubeconfig-wordpress.yml"
       ansible_rancher_cluster_name: wordpress-test
