--- a/ansible/roles/rke2-node/tasks/main.yml
+++ b/ansible/roles/rke2-node/tasks/main.yml
@@ -1,6 +1,14 @@
 - include_vars: ../vars/rancher-vars.yml
   tags: always
 
+- name: configure crictl for interactive use
+  ansible.builtin.blockinfile:
+    path: /root/.profile
+    block: |
+      export CRI_CONFIG_FILE=/var/lib/rancher/rke2/agent/etc/crictl.yaml
+      export CONTAINERD_ADDRESS=unix:///run/k3s/containerd/containerd.sock
+      export PATH=$PATH:/var/lib/rancher/rke2/bin
+
 - name: get nodes list
   kubernetes.core.k8s_info:
     kind: Node
