--- a/ansible/roles/rke2-node/tasks/main.yml
+++ b/ansible/roles/rke2-node/tasks/main.yml
@@ -4,10 +4,28 @@
 - name: configure crictl for interactive use
   ansible.builtin.blockinfile:
     path: /root/.profile
+    marker: '# {mark} ANSIBLE MANAGED BLOCK - crictl'
     block: |
       export CRI_CONFIG_FILE=/var/lib/rancher/rke2/agent/etc/crictl.yaml
       export CONTAINERD_ADDRESS=unix:///run/k3s/containerd/containerd.sock
       export PATH=$PATH:/var/lib/rancher/rke2/bin
+
+- name: install kubectl
+  community.general.snap:
+    name: kubectl
+    classic: yes
+    channel: latest/stable
+  when:
+    - RKE_ROLE == "control"
+
+- name: configure kubectl
+  ansible.builtin.blockinfile:
+    path: /root/.profile
+    marker: '# {mark} ANSIBLE MANAGED BLOCK - kubectl'
+    block: |
+      export KUBECONFIG=/etc/rancher/rke2/rke2.yaml
+  when:
+    - RKE_ROLE == "control"
 
 - name: get nodes list
   kubernetes.core.k8s_info:
