--- a/ansible/roles/rke2-cluster/tasks/wpn-mariadb.yml
+++ b/ansible/roles/rke2-cluster/tasks/wpn-mariadb.yml
@@ -6,7 +6,7 @@
       kind: MariaDB
       metadata:
         name: mariadb-min
-        namespace: "{{ mariadb_namespace_name }}"
+        namespace: "{{ namespace_name }}"
       spec:
         storage:
           size: 2G
@@ -25,7 +25,7 @@
       apiVersion: k8s.mariadb.com/v1alpha1
       kind: Database
       metadata:
-        namespace: "{{ mariadb_namespace_name }}"
+        namespace: "{{ namespace_name }}"
         name: wordpress-test
       spec:
         # If you want the database to be created with a different name than the resource name
@@ -45,7 +45,7 @@
       type: Opaque
       metadata:
         name: db-password
-        namespace: "{{ mariadb_namespace_name }}"
+        namespace: "{{ namespace_name }}"
       stringData:
         password: secret
 
@@ -58,7 +58,7 @@
       kind: User
       metadata:
         name: wordpress
-        namespace: "{{ mariadb_namespace_name }}"
+        namespace: "{{ namespace_name }}"
       spec:
         mariaDbRef:
           name: mariadb-min
@@ -77,7 +77,7 @@
       kind: Grant
       metadata:
         name: wordpress
-        namespace: "{{ mariadb_namespace_name }}"
+        namespace: "{{ namespace_name }}"
       spec:
         mariaDbRef:
           name: mariadb-min
