--- a/ansible/roles/rke2-cluster/tasks/wpn-nginx.yml
+++ b/ansible/roles/rke2-cluster/tasks/wpn-nginx.yml
@@ -103,7 +103,7 @@
       apiVersion: v1
       kind: PersistentVolumeClaim
       metadata:
-        name: wp-uploadswp-uploads
+        name: wp-uploads
         namespace: "{{ namespace_name }}"
       spec:
         accessModes:
