Include NGINX config from /etc/nginx/generated-conf.d/

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -20,6 +20,7 @@ http
         ssl_certificate /etc/nginx/ssl/server.cert;
         ssl_certificate_key /etc/nginx/ssl/server.key;
 
+        include /etc/nginx/generated-conf.d/*.conf;
         include /etc/nginx/conf.d/*.conf;
     }
 }
